--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -16,7 +16,7 @@
   width: 100%;
   gap: 20px;
   grid-template-columns: repeat(2, minmax(0, 1fr));
-  grid-template-rows: 90px 90px 380px;
+  grid-template-rows: 90px 90px auto;
   grid-template-areas:
     "email       github"
     "linkedin    github"
